Callbacks in javascript custom call back :)

--- a/setInterval/index.html
+++ b/setInterval/index.html
@@ -15,20 +15,19 @@
   </head>
   <body>
     <div class="container">
-      <header>
-        <h1>Set Interval</h1>
-        <i class="fa-solid fa-house-chimney-crack"></i>
-      </header>
-      <div class="interval-container">
-        <div class="colors-container" id="colors-container">
-        
+        <header>
+            <h1>Set Interval</h1>
+            <i class="fa-solid fa-house-chimney-crack"></i>
+        </header>
+        <div class="interval-container">
+            <div class="colors-container" id="colors-container"></div>
+            <div class="btns-container">
+                <button id="btn-start" class="btn-start">Start Random Color</button>
+                <button id="btn-stop" class="btn-stop">Select Random Color</button>
+            </div>
+            <button id="btn-clear" class="btn-clear">Clear Timer</button>
+      
         </div>
-        <div class="btns-container">
-            <button id="btn-start" class="btn-start">Start Random Color</button>
-            <button id="btn-strop" class="btn-stop">Select Random Color</button>
-        </div>
-      </div>
-    </div>
     <script src="./script.js"></script>
   </body>
 </html>
