--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+   
     <link rel="stylesheet" href="./style.css">
     <title>Asynchronous </title>
 </head>
@@ -20,6 +18,8 @@
                 <li><a href="./setTimeout/index.html" class="link">Set Timeout</a></li>
                 <li><a href="./setInterval/index.html" class="link">Set Interval</a></li>
                 <li><a href="./callback/index.html" class="link">Callback</a></li>
+                <li><a href="./AJAXandXHR/" class="link">AJAX & XHR</a></li>
+                <li><a href="./chucknorris/index.html" class="link">Chuck Norris Joke</a></li>
             </ul>
         </div>
     </div>
