promises were covered

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                 <li><a href="./callback/index.html" class="link">Callback</a></li>
                 <li><a href="./AJAXandXHR/" class="link">AJAX & XHR</a></li>
                 <li><a href="./chucknorris/index.html" class="link">Chuck Norris Joke</a></li>
+                <li><a href="./promises/index.html" class="link">Promises</a></li>
+                <li><a href="./callbackToPromiseRefactor/index.html" class="link">Callback to Promise</a></li>
             </ul>
         </div>
     </div>
